  * Make sure that backend_configured happens for right user.
  * Re-order installer so Mythbuntu steps appear at a different
    time.

  [ Evan Dandrea ]
  * The migration-assistant page will now be skipped if there are no
    partitions able to be imported from.
  * Initialize self.errors in migration-assistant (LP: #134254).
  * Add a progress bar for automatic mode.

 -- Evan Dandrea <evand@ubuntu.com>  Tue, 04 Sep 2007 14:26:42 -0400

ubiquity (1.5.12) gutsy; urgency=low

  [ Mario Limonciello ]
  * Disable tv-tuner selection GUI in mythbuntu frontend until
    mythbuntu-firmware-detector is completed.
  * Remove mythbuntu scripts present in multiple binary packages from
    ubiquity binary package. (LP: #131092)
  * Rework all mythbuntu scripts and behavior of UI to make every GTK
    notebook page a debconf step.
  * Add support to choose hdhomerun during install.
  * Fix broken mythbuntu_apply that still had "no" rather than "false" for
    items to remove. (LP: #130641)

  [ Thomas Mashos ]
  * Update mythbuntu GUI to reflect schedules direct requirement for North
    American users.
  * Make sure Mythbuntu automatic login is prepared for proper user.

  [ Evan Dandrea ]
  * Automatic update of included source packages: grub-installer
    1.24ubuntu2, partman-target 50ubuntu3.

 -- Evan Dandrea <evand@ubuntu.com>  Sat, 25 Aug 2007 14:05:06 -0400

ubiquity (1.5.11) gutsy; urgency=low

  * Remove accidentally leftover debugging code
  * Repeat changes to page handling code to kdeui.
  * Automatic update of included source packages: partman-
    basicfilesystems 54ubuntu3, partman-partitioning 50ubuntu2.

 -- Evan Dandrea <evand@ubuntu.com>  Mon, 20 Aug 2007 17:31:47 -0400

ubiquity (1.5.10) gutsy; urgency=low

  * Fix intltool to fix FTBFS.  Thanks Keybuk.

 -- Evan Dandrea <evand@ubuntu.com>  Thu, 16 Aug 2007 17:10:35 -0400

ubiquity (1.5.9) gutsy; urgency=low

  [ Colin Watson ]
  * Add a manual page for ubiquity.

  [ Evan Dandrea ]